kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dermacam
  namespace: dermacam
  annotations:
    cert-manager.io/issuer: cert-dermacam
  labels:
    app: dermacam-app
spec:
  tls:
  - hosts:
    - dermalert-backend.clusterlab.lappis.rocks
    secretName: tls-dermacam
  rules:
  - host: dermalert-backend.clusterlab.lappis.rocks
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: dermacam-service
              port:
                number: 8000
  ingressClassName: "external-nginx"
